# pact-data-model

./: Cargo.toml  README.md
.github/workflows/: ci.yml  test.yml
schema/: data-model-schema.json
src/: lib.rs  main.rs
tests/: tests.rs
